--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
                 <div class="logo">
                     <a href="index.html">
-                        <!-- Logo -->
+                        <img src="images/logos/baseline_trip_origin_black_24dp.png">
                     </a>
                 </div>
 
@@ -26,9 +26,9 @@
 
             <div class="right-column">
                 <div class="navigation-links">
-                    <a href="works.html">Resume</a>
+                    <a href="resume.html">Resume</a>
                     <a href="blog.html">Blog</a>
-                    <a href="blog.html">Contact</a>
+                    <a href="contact.html">Contact</a>
                 </div>
             </div>
 
