--- a/index.html
+++ b/index.html
@@ -3,32 +3,38 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Hyper Text</title>
-        <meta name="description" content="">
+        <meta name="description" content="Hyper Text. Proffessional Markup Language">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway&display=swap" rel="stylesheet"> 
+        <link rel="stylesheet" href="css/common.css">
+        <link rel="stylesheet" href="css/header.css">
     </head>
     <body>
         <div class="header">
             
             <div class="left-column">
-
                 <div class="logo">
                     <a href="index.html">
-                        <img src="images/logos/baseline_trip_origin_black_24dp.png">
+                        <img src="images/logos/baseline_trip_origin_white_24dp.png">
                     </a>
                 </div>
-
                 <div class="title">
                     <a href="index.html">Hyper Text</a>
                 </div>
-                
             </div>
 
             <div class="right-column">
                 <div class="navigation-links">
-                    <a href="resume.html">Resume</a>
-                    <a href="blog.html">Blog</a>
-                    <a href="contact.html">Contact</a>
+                    <div class="link">
+                        <a href="resume.html">Resume</a>
+                    </div>
+                    <div class="link">
+                        <a href="blog.html">Blog</a>
+                    </div>
+                    <div class="link">
+                        <a href="contact.html">Contact</a> 
+                    </div>
                 </div>
             </div>
 
