--- a/index.html
+++ b/index.html
@@ -1,44 +1,138 @@
 <!DOCTYPE html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Hyper Text</title>
-        <meta name="description" content="Hyper Text. Proffessional Markup Language">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway&display=swap" rel="stylesheet"> 
-        <link rel="stylesheet" href="css/common.css">
-        <link rel="stylesheet" href="css/header.css">
-    </head>
-    <body>
-        <div class="header">
-            
-            <div class="left-column">
-                <div class="logo">
-                    <a href="index.html">
-                        <img src="images/logos/baseline_trip_origin_white_24dp.png">
-                    </a>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Hyper Text</title>
+    <meta name="description" content="Hyper Text. Proffessional Markup Language">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/article.css">
+    <link rel="stylesheet" href="css/footer.css">
+</head>
+
+<body>
+    <div class="header" id="topHeader">
+
+        <div class="left-column">
+            <div class="logo">
+                <a href="index.html">
+                    <img src="images/logos/baseline_trip_origin_white_24dp.png">
+                </a>
+            </div>
+            <div class="title">
+                <a href="index.html">Hyper Text</a>
+            </div>
+        </div>
+
+        <div class="right-column">
+            <div class="navigation-menu">
+                <div class="link">
+                    <a href="resume.html">Resume</a>
                 </div>
-                <div class="title">
-                    <a href="index.html">Hyper Text</a>
+                <div class="link">
+                    <a href="blog.html">Blog</a>
+                </div>
+                <div class="link">
+                    <a href="contact.html">Contact</a>
                 </div>
             </div>
+        </div>
 
-            <div class="right-column">
-                <div class="navigation-links">
-                    <div class="link">
-                        <a href="resume.html">Resume</a>
-                    </div>
-                    <div class="link">
-                        <a href="blog.html">Blog</a>
-                    </div>
-                    <div class="link">
-                        <a href="contact.html">Contact</a> 
-                    </div>
+    </div>
+
+    <div class="hero-section">
+
+        <div class="hero-card">
+
+            <div class="profile-picture">
+                <img src="images/profile/account_box-24px.png">
+            </div>
+
+            <div class="hero-text">
+                <div class="top-heading">
+                    <h1>Hyper Text</h1>
+                </div>
+
+                <div class="bottom-heading">
+                    <h3>Professional Markup Language</h3>
                 </div>
             </div>
 
         </div>
 
-    </body>
+
+    </div>
+
+    <div class="page-container">
+        <div class="content-wrapper">
+
+            <div class="section">
+                <h2>Who Am I</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam autem repudiandae, nulla asperiores
+                    eaque
+                    nemo cum eum eveniet maiores omnis. Dolorum, reprehenderit aliquam. Voluptatibus illo eos earum
+                    suscipit. Perferendis, ipsam voluptatibus deserunt vero adipisci sunt maxime minima aspernatur
+                    officiis
+                    minus, ad ipsa tenetur? Accusamus ab obcaecati perferendis, neque harum aut, consequatur dignissimos
+                    deleniti provident fugit doloremque totam tempore magni animi facere tempora adipisci quidem,
+                    quaerat
+                    earum a eveniet iste. Nulla quas ex consequuntur nesciunt alias quam dolores commodi, esse nihil
+                    deleniti debitis perferendis, corrupti fugit quidem reprehenderit non dolorum repellendus quia
+                    dignissimos sapiente, tempore at magni quod? Deserunt, iure totam.</p>
+            </div>
+
+            <div class="section">
+                <h2>What I Do</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam autem repudiandae, nulla asperiores
+                    eaque
+                    nemo cum eum eveniet maiores omnis. Dolorum, reprehenderit aliquam. Voluptatibus illo eos earum
+                    suscipit. Perferendis, ipsam voluptatibus deserunt vero adipisci sunt maxime minima aspernatur
+                    officiis
+                    minus, ad ipsa tenetur? Accusamus ab obcaecati perferendis, neque harum aut, consequatur dignissimos
+                    deleniti provident fugit doloremque totam tempore magni animi facere tempora adipisci quidem,
+                    quaerat
+                    earum a eveniet iste. Nulla quas ex consequuntur nesciunt alias quam dolores commodi, esse nihil
+                    deleniti debitis perferendis, corrupti fugit quidem reprehenderit non dolorum repellendus quia
+                    dignissimos sapiente, tempore at magni quod? Deserunt, iure totam.</p>
+            </div>
+
+            <div class="section">
+                <h2>Where I Am</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam autem repudiandae, nulla asperiores
+                    eaque
+                    nemo cum eum eveniet maiores omnis. Dolorum, reprehenderit aliquam. Voluptatibus illo eos earum
+                    suscipit. Perferendis, ipsam voluptatibus deserunt vero adipisci sunt maxime minima aspernatur
+                    officiis
+                    minus, ad ipsa tenetur? Accusamus ab obcaecati perferendis, neque harum aut, consequatur dignissimos
+                    deleniti provident fugit doloremque totam tempore magni animi facere tempora adipisci quidem,
+                    quaerat
+                    earum a eveniet iste. Nulla quas ex consequuntur nesciunt alias quam dolores commodi, esse nihil
+                    deleniti debitis perferendis, corrupti fugit quidem reprehenderit non dolorum repellendus quia
+                    dignissimos sapiente, tempore at magni quod? Deserunt, iure totam.</p>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="footer">
+        <p>&copy; Hyper Text 2020</p>
+    </div>
+
+    <script>
+        window.addEventListener("scroll", function () {
+            let menuArea = document.getElementById('topHeader');
+            if (window.pageYOffset > 0) {
+                menuArea.classList.add("cus-nav");
+            } else {
+                menuArea.classList.remove("cus-nav");
+            }
+        })
+    </script>
+</body>
+
 </html>
