--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/hero.css">
     <link rel="stylesheet" href="css/article.css">
     <link rel="stylesheet" href="css/footer.css">
 </head>
