--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Hyper Text</title>
+    <title>Hyper Text. Proffessional Markup Language</title>
     <meta name="description" content="Hyper Text. Proffessional Markup Language">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
